--- a/views/admin/upload.ejs
+++ b/views/admin/upload.ejs
@@ -164,7 +164,7 @@
       htmlObj.innerHTML =
       htmlObj.innerHTML +
       "<input class ='form-control' type='phần trăm' name='phase' placeholder='Phần trăm của đợt 1' id='list_dot'/> " +
-      "  <input type='button' class='bg-danger p-1 border-0' value='xóa' onclick=dele() id='buttonDele' />";
+      "  <input type='button' class='bg-danger p-1 border-0 rounded text-white mt-1 mb-1' value='xóa' onclick=dele() id='buttonDele' />";
       }
     function dele() {
       const deleelemeent = document.getElementById("list_dot");
