--- a/views/components/apartment.ejs
+++ b/views/components/apartment.ejs
@@ -119,321 +119,32 @@
               <h1 style="padding: 20px">NỘI DUNG</h1>
               <p class="tab-text"><%= apartment.description %></p>
             
+
+              <form action="/analysis/<%=apartment.id%>" method="POST">
               <div class="form-ptich">
                 <div class="login-form">
                   <h1>Bảng Phân Tích</h1>
                   <div class="input-box">
-                      <i> Giá Trị Căn Hộ </i>
-                      <output class="input-box-outputPrice" type="number" placeholder="VND"><%= apartment.price %></output>
+                      <span> Giá Trị Căn Hộ </span>
+                      <input class="input-box-outputPrice" type="number" value="<%= apartment.price %>" name="price"></input>
                   </div>
+                  
                   <div class="input-box">
                       <label for="">Tiến Độ Thanh Toán</label>
-                      <select name="value" class="form-control">
-                    <option value="">Tiến độ</option>
-                    <option value="tdtt">Tiến Độ Thường</option>
+                      <select name="type" class="form-control">
+                    <option value="normal">Tiến Độ Thường</option>
                     <option value="70">70%</option>
                     <option value="90">90%</option>
                     <option value="vnh">Vay Ngân Hàng</option>
                 </select>
-                      
-                
               </div>
               <div class="center">
                 <button type="submit" class="btn-success">Kiểm Tra</button>
             </div>
           </div>
               </div>
-              
+            </form>
 
-    <h2 class="title">Bảng Phân Tích Tài Chính</h2>
-    <div class="table1">
-        <table class="table">
-            <thead>
-                <tr class="kkkk">
-                    <th>DANH MỤC</th>
-                    <th>ĐƠN VỊ (%)</th>
-                    <th>ĐƠN VỊ (vnd)</th>
-                    <th>THUẾ</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        <span> GIÁ NIÊM YẾT </span>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= apartment.price %>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= apartment.price %>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <output type="text" name="percent" class="form-control form-inline">
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <span> CHÍNH SÁCH CHIẾT KHẤU THANH TOÁN </span>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= percentDiscount = 7 %>%
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= discount = apartment.price * percentDiscount / 100 %>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= vatDis = discount-(discount * 10 / 100) %>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <span> CÁC CHIẾT KHẤU KHÁC </span>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= percentOther = 5 %>%
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= other = vatDis * percentOther / 100 %>
-                            
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= vatOther = other-(other *10 / 100) %>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <span> TỔNG SỐ TIỀN CHIẾT KHẤU </span>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <output type="text" name="percent" class="form-control form-inline">
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= vatSum = vatDis + vatOther %>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <output type="text" name="percent" class="form-control form-inline">
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <span> TỔNG GIÁ TRỊ CHIẾT KHẤU </span>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <output type="text" name="percent" class="form-control form-inline">
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= apartment.price - vatSum %>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <output type="text" name="percent" class="form-control form-inline">
-                        </div>
-                    </td>
-                </tr>
-
-            </tbody>
-        </table>
-    </div>
-    <h2 class="title">Tiến Độ Thanh Toán</h2>
-    <div class="table1">
-        <table class="table">
-            <thead>
-                <tr class="kkkk">
-                    <th>TIẾN ĐỘ</th>
-                    <th>TỶ LỆ</th>
-                    <th>SỐ TIỀN THANH TOÁN</th>
-                    <th>THỜI HẠN THANH TOÁN</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% for(let i = 0; i< phase.length; i++) { %>
-                <tr>
-                    <td>
-                        <span>  Đợt <%= i +1 %> </span>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= phase[i].percent %>%
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= phase[i].moneyPhase %>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <output type="text" name="percent" class="form-control form-inline">
-                        </div>
-                    </td>
-                </tr>
-            <% } %>
-                <tr>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            Tổng tiền
-                        </div>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <% a = 0 %>
-                            <%for(let i = 0; i < phase.length; i++) { %>
-                                <% a += phase[i].moneyPhase  %>
-                                <% } %>
-                                <%= a %>
-                        </div>
-                    </td>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <h2 class="title">Bảng Tính Lợi Nhuận</h2>
-    <div class="table1">
-        <table class="table">
-            <thead>
-                <tr class="kkkk">
-                    <th>CHI TIẾT</th>
-                    <th>TIỀN</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        <span> TỈ LỆ FULL PHÒNG / THÁNG </span>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= full = 70 %>%
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <span> GÍA CHO THUÊ PHÒNG </span>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= apartment.priceMonth %>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <span>  QUY ĐỔI VOUCHER </span>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= apartment.priceMonth * 2 %>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <span> LỢI NHUẬN THU VỀ TRÊN THÁNG </span>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= profit = apartment.priceMonth*(30*full) %>
-                        </div>
-                    </td>
-
-
-                </tr>
-                <tr>
-                    <td>
-                        <span> CHI PHÍ SỬA CHỮA </span>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= fix = profit * 3 / 100 %>
-                        </div>
-                    </td>
-
-
-                </tr>
-                <tr>
-                    <td>
-                        <span> CHIA SẺ LỢI NHUẬN </span>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= share = profit * 20 / 100 %>
-                        </div>
-                    </td>
-
-
-                </tr>
-                
-                <tr>
-                    <td>
-                        <span>LỢI NHUẬN THU VỀ/THÁNG (Sau Khi Trừ Chi Phí) </span>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= month = profit - share - fix %>
-                        </div>
-                    </td>
-
-
-                </tr>
-                <tr>
-                    <td>
-                        <span> LỢI NHUẬN THU VỀ TRÊN NĂM </span>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= year = month * 12 %>
-                        </div>
-                    </td>
-
-
-                </tr>
-                <tr>
-                    <td>
-                        <span> LỢI NHUẬN THU VỀ SAU 10 NĂM </span>
-                    </td>
-                    <td>
-                        <div class="form-group mb-0 d-inline-block">
-                            <%= end = year * 10 %>
-                        </div>
-                    </td>
-
-
-                </tr>
-                <tr>
-
-
-        </table>
-    </div>
-    
   </div>
                   
             <div id="comment" class="NDtab-items" style="display: none">
